--- a/docs/POSDE_bookdown.tex
+++ b/docs/POSDE_bookdown.tex
@@ -371,6 +371,32 @@ The extent to which the negative result of the Michelson--Morley experiment infl
 
 For a longer and deeper explanation of the experiment, its historical context and consequences, watch \href{https://www.youtube.com/watch?v=Ip_jdcA8fcw}{episode 41 from The Mechanical Universe}. The timeline of luminiferous aether can be found \href{https://en.wikipedia.org/wiki/Timeline_of_luminiferous_aether}{at the Wikipedia}.
 
+\hypertarget{eddington-expeditions}{%
+\subsection{Eddington expeditions}\label{eddington-expeditions}}
+
+The following example also relates to falsification (see \ref{falsification}) which is taught in the next Chapter. However, this is also a good example of how a good theory should make definite predictions such as those from Einstein's theory of general relativity.
+
+Figure \ref{fig:eddington-eclipse} shows the positions of different stars during the eclipse. Such stars are not normally visible in the daytime due to the brightness of the Sun but become visible during the moment when the Moon fully covers the solar disc. A difference in the observed position of the stars during the eclipse, compared to their normal position at night, indicates that the light from these stars had bent as it passed close to the Sun.
+
+
+
+\begin{figure}
+
+{\centering \includegraphics[width=1\linewidth]{Figures/solar_eclipse} 
+
+}
+
+\caption{Eddington and Crommelin imaged the eclipse using the technology of the time: photographic plates made of glass. Sadly, the original plates from the 1919 expedition have been lost --- but, luckily, copies of one of the plates were made and sent to observatories around the world to allow scientists everywhere to see the evidence in support of relativity with their own eyes. Source: \href{https://www.eso.org/public/images/potw1926a/}{European Southern Observatory}.}\label{fig:eddington-eclipse}
+\end{figure}
+
+\begin{quote}
+Einstein's theory made a clear prediction: light rays from distant stars would be deflected by the gravitational field of the sun. Normally this effect would be impossible to observe --- except during a solar eclipse. In 1919 the English astrophysicist Sir Arthur Eddington organized two expeditions to observe the solar eclipse of that year, one to Brazil and one to the island of Principe off the Atlantic coast of Africa, with the aim of testing Einstein's prediction. The expeditions found that starlight was indeed deflected by the sun, by almost exactly the amount Einstein had predicted. Popper was very impressed by this. Einstein's theory had made a definite, precise prediction, which was confirmed by observations. Had it turned out that starlight was not deflected by the sun, this would have shown that Einstein was wrong. So Einstein's theory satisfies the criterion of falsifiability. --- \citep{okasha-pos}
+\end{quote}
+
+\begin{quote}
+Einstein published his general theory of relativity in 1915. The total solar eclipse of 1919 offered the perfect opportunity to test it experimentally, by exploring whether --- and how --- the immense gravity of the Sun bends and distorts incoming light from more distant stars, as predicted by Einstein's theory. For a brief moment during the eclipse, the Moon would block the Sun's light in the sky and make visible some of the stars that lie close to the line of sight of the Sun, not normally visible during the daytime. By measuring the positions of these stars during the eclipse and comparing them to their positions at night, when the sun is not in the field of view, it would be possible to determine whether their light rays bends while passing close to the Sun. --- European Southern Observatory
+\end{quote}
+
 \hypertarget{smoke-debate}{%
 \subsection{The smoke debate}\label{smoke-debate}}
 
@@ -1517,6 +1543,164 @@ This chapter is under construction. Content is hidden.
 
 \end{notebox}
 
+\hypertarget{overview-2}{%
+\section{Overview}\label{overview-2}}
+
+Continue on the example from chapter \ref{empirical-practices} from Chapter 4 from the Book of Why.
+
+\hypertarget{bias-and-confounders}{%
+\section{Bias and Confounders}\label{bias-and-confounders}}
+
+\hypertarget{experimental-errors}{%
+\subsection{Experimental errors}\label{experimental-errors}}
+
+\hypertarget{confirmation-bias}{%
+\subsubsection{Confirmation bias}\label{confirmation-bias}}
+
+\hypertarget{selection-bias}{%
+\subsubsection{Selection bias}\label{selection-bias}}
+
+Women and Health Research: Ethical and Legal Issues of Including Women in Clinical Studies
+
+\url{https://www.ncbi.nlm.nih.gov/books/NBK236575/}
+
+\hypertarget{internal-and-external-validity}{%
+\subsubsection{Internal and External validity}\label{internal-and-external-validity}}
+
+Example from § \ref{covid-israel}.
+
+\begin{itemize}
+\tightlist
+\item
+  Ref. Chapter Confounding and deconfounding, from The Book of Why.
+\item
+  Ref. Judgment under Uncertainty. (Amos Tversky and Daniel Kahneman).
+\item
+  Ref. John Snow and cholera.
+\item
+  Ref. \url{https://catalogofbias.org/}
+\item
+  The trouble with bias \url{https://www.youtube.com/watch?v=fMym_BKWQzk}
+\item
+  The problem with building a fair system \url{https://www.oreilly.com/radar/the-problem-with-building-a-fair-system/}
+\end{itemize}
+
+\hypertarget{data-is-not-enough}{%
+\section{Data alone is not enough}\label{data-is-not-enough}}
+
+The confirmation of a hypothesis is often considered to increase as the number of favourable test findings grows, but the increase in confirmation, produced by one new favourable instance, will generally become smaller as the number of previously established favourable instances grows \citep{hempel-pos}. Many researchers and data scientists blindly rely on the dogma \emph{the more data, the merrier} but the addition of one more favourable finding raises the hypothesis confirmation but little. The confirmation of a hypothesis depends not only on the quantity of the favourable evidence available but also on its variety.
+
+\hypertarget{visualizations-can-lie}{%
+\section{Visualizations can lie}\label{visualizations-can-lie}}
+
+\begin{itemize}
+\tightlist
+\item
+  Ref. How charts lie from Alberto Cairo. \url{https://www.newyorker.com/magazine/2021/06/21/when-graphs-are-a-matter-of-life-and-death}
+\end{itemize}
+
+Example from § \ref{viz-hurricane}.
+
+\hypertarget{more}{%
+\section{More\ldots{}}\label{more}}
+
+\hypertarget{examples-3}{%
+\section{Examples}\label{examples-3}}
+
+\hypertarget{covid-israel}{%
+\subsection{Covid-19: How can efficacy versus severe disease be strong when 60\% of hospitalized are vaccinated?}\label{covid-israel}}
+
+\begin{rnote}
+\emph{There are three kinds of lies: Lies, damned lies, and statistics}
+
+\end{rnote}
+
+In this \href{https://www.covid-datascience.com/post/israeli-data-how-can-efficacy-vs-severe-disease-be-strong-when-60-of-hospitalized-are-vaccinated}{blog post}, biostatistics Professor Jeffrey Morris demonstrates how without properly controlling for age, efficacy against severe disease in Israel may appear weak when in fact within each age-group it is extremely strong. Consider the table from Figure \ref{fig:vaccine-rates-a} and the following data from the the Israeli government. As of August 15, 2021 nearly 60\% of all patients currently hospitalized for COVID-19 are vaccinated. Out of 515 patients currently hospitalized with severe cases in Israel, 301 (58.4\%) of these cases were fully vaccinated.
+
+\begin{figure}
+
+{\centering \includegraphics[width=0.7\linewidth]{Figures/vaccines-ex-fig1} 
+
+}
+
+\caption{Misleading table. This kind of tables have been used to claim that vaccines do not work or that its efectiveness reduces over time.}\label{fig:vaccine-rates-a}
+\end{figure}
+
+The numbers are true, but we need more than that to draw a proper conclusion about vaccine efficacy. Consider the following extreme scenarios. If the number of vaccinated people would be 0 we would expect all severe cases to be not vaccinated (obviously). On the other hand, if 100\% of people would have been vaccinated, we would expect all severe cases to proceed from vaccinated people and 0 from non vaccinated. In this case, we have an in-between situation where 80\% of residents (older than 12 years) have been vaccinated. Therefore, since the group of vaccinated people is larger than the non-vaccinated, we can expect more severe cases in absolute numbers. However, once we adjust for vaccination rates and normalise the counts, the story changes. The rate of severe cases is three times higher in unvaccinated individuals.
+
+\begin{figure}
+
+{\centering \includegraphics[width=0.7\linewidth]{Figures/vaccines-ex-fig2} 
+
+}
+
+\caption{Table adjusted for vaccination rates.}\label{fig:vaccine-rates-b}
+\end{figure}
+
+\begin{quote}
+Vaccine Efficacy vs.~Severe disease = 1 - 5.3/16.4 = 67.5\%.
+The interpretation of this number is that the vaccines are preventing \textgreater2/3 of the serious infections leading to hospitalization that would have occurred sans vaccination.
+\end{quote}
+
+Still, the obtained efficacy is lower than what we would expect. There are other factors that contribute to this confusion, including: age disparity in vaccinations, old people is more likely to be hospitalized than young people, etc.
+
+I recommend going through the blog post to see how the author continues to apply adjustments and stratifications to find the true efficacy of the vaccines. Moreover, this is a good example of the Simpson's paradox, where misleading results can be obtained in the presence of confounding factors.
+
+\begin{quote}
+In conclusion, as long as there is a major age disparity in vaccination rates, with older individuals being more highly vaccinated, then the fact that older people have an inherently higher risk of hospitalization when infected with a respiratory virus means that it is always important to stratify results by age; Even more fundamentally, it is important to use infection and disease rates (per 100k, e.g.) and not raw counts to compare unvaccinated and vaccinated groups to adjust for the proportion vaccinated. Use of raw counts exaggerates the vaccine efficacy when vaccinated proportion is low and attenuates the vaccine efficacy when, like in Israel, vaccines proportions are high.
+\end{quote}
+
+\hypertarget{viz-hurricane}{%
+\subsection{Misinterpretations of hurricane forecast maps}\label{viz-hurricane}}
+
+The \href{https://www.nytimes.com/interactive/2019/08/29/opinion/hurricane-dorian-forecast-map.html}{following article} by Alberto Cairo published in The New York Times explains how hurricane cone forecast maps can mislead the public and produce real-world consequences.
+
+\begin{figure}
+
+{\centering \includegraphics[width=0.66\linewidth]{Figures/hurricane-forecast-maps-tv} 
+
+}
+
+\caption{Example of hurricane forecast cone graphic in TV.}\label{fig:hurricane-tv}
+\end{figure}
+
+\href{https://www.semanticscholar.org/paper/Misinterpretations-of-the-\%E2\%80\%9CCone-of-Uncertainty\%E2\%80\%9D-in-Broad-Leiserowitz/f7c04b6eb883cf7d7fdee007cda056ed18182829}{Studies} show that people can misinterpret this type of map as indicating that the hurricane will get bigger over time. Others think it shows areas under threat. Recent \href{https://interactive.miami.edu/hurakan/}{research} suggests that 40\% of people would not feel threatened if they lived just outside of the cone. Moreover, people who live inside the cone, but far from the center, take less precautions than those closer to the central line. These misunderstandings have real-world consequences. Actually, the cone represents a range of possible positions and paths for the storm's center. The dots in the middle of the cone correspond to the forecast of where the hurricane's center could be in the following five days. But there's a good chance that the actual center of the storm will not end up being at those positions.
+
+To create the cone, the National Hurricane Center (N.H.C.) surrounds each estimated position of the storm center with circles of increasing size. \textbf{These circles represent uncertainty}, meaning that the storm center may end up being anywhere inside the circles --- or even outside of them. The uncertainty circles grow over time because it is more difficult to to predict what will happen in five days from now than in one day. Finally, a curve connects the circles, resulting in what is popularly known as the `cone of uncertainty'.
+
+\begin{figure}
+
+{\centering \includegraphics[width=0.66\linewidth]{Figures/hurricane-forecast-maps} 
+
+}
+
+\caption{Cone of uncertainty.}\label{fig:hurricane-map}
+\end{figure}
+
+\begin{quote}
+N.H.C. says cones will contain the path of the storm center only 60 to 70 \% of the time. In other words, one out of three times we experience a storm like this, its center will be outside the boundaries of the cone. Hurricanes are also hundreds of miles wide, and the cone shows only the possible path of the storm's center. Heavy rain, storm surges, flooding, wind and other hazards may affect areas outside the cone. The cone, when presented on its own, doesn't give us much information about a hurricane's dangers. The N.H.C. designs other graphics, including this one showing areas that may be affected by strong winds. But these don't receive nearly as much attention as the cone. The cone graphic is deceptively simple. That becomes a liability if people believe they're out of harm's way when they aren't. As with many charts, it's risky to assume we can interpret a hurricane map correctly with just a glance. Graphics like these need to be read closely and carefully. Only then can we grasp what they're really saying.
+\end{quote}
+
+\begin{rnote}
+From a \href{https://www.nytimes.com/interactive/2019/08/29/opinion/hurricane-dorian-forecast-map.html}{NYT article} by Alberto Cairo
+
+\end{rnote}
+
+\begin{figure}
+
+{\centering \includegraphics[width=0.66\linewidth]{Figures/hurricane-forecast-heat-map} 
+
+}
+
+\caption{Other graphics designed by USA National Hurricane Center.}\label{fig:hurricane-heatmap}
+\end{figure}
+
+\hypertarget{the-smoke-debate-part-ii}{%
+\subsection{The smoke debate (part II)}\label{the-smoke-debate-part-ii}}
+
+\hypertarget{takeaway-messages-1}{%
+\section{Takeaway Messages}\label{takeaway-messages-1}}
+
 \hypertarget{ethics-and-responsibility}{%
 \chapter{Ethics and Responsibility}\label{ethics-and-responsibility}}
 
@@ -1530,6 +1714,226 @@ This chapter is under construction. Content is hidden.
 This chapter is under construction. Content is hidden.
 
 \end{notebox}
+
+\hypertarget{overview-3}{%
+\section{Overview}\label{overview-3}}
+
+Very often, progress, ethics and laws go hand in hand. The industrial revolution increased the living standards but also brought new challenges, problems and ethical questions. Labour conditions were harsh and child labour was common long before the industrial revolution. Progress and technology raise new ethical questions. Bit by bit certain practices and conditions became culturally unacceptable with a growing social consensus in the same direction that eventually forced laws to reflect those changes. Nowadays, rights such as office restrooms or the lunch break are widespread.
+
+\begin{figure}
+
+{\centering \includegraphics[width=0.25\linewidth]{Figures/coaltub} 
+
+}
+
+\caption{A young drawer pulling a coal tub along a mine gallery.}\label{fig:coaltub}
+\end{figure}
+
+Similarly, we live in the information revolution, which has transformed the way societies communicate in a way not seen since the Gutenberg printer revolution, enabling the world to transmit information worldwide almost instantaneously through the interconnection of computers. The information era brings ethical challenges to a new dimension. Gutenberg print helped to spread literature and knowledge but it also made it easier to spread hate and fake news (see \href{https://www.politico.com/magazine/story/2016/12/fake-news-history-long-violent-214535/}{this article for some examples}). Today, tools like Facebook have been used to incite the \href{https://www.nytimes.com/2018/10/15/technology/myanmar-facebook-genocide.html}{genocide of Rohingya in Myanmar}. Every data scientist must understand the impact of their work for the good and the bad. Something as simple as a good visualization can be enlightening and convince people to get a vaccine or find the root of an outbreak (see the map of John Snow). But bad data science can have unexpected real-world consequences too.
+
+\hypertarget{morality-and-ethics}{%
+\section{Morality and Ethics}\label{morality-and-ethics}}
+
+\begin{notebox}
+
+\begin{center}
+\textbf{Course Note:}
+
+\end{center}
+
+In this course we will not address all the philosophical questions regarding ethics but will try to focus on the ethical practice of data science.
+
+\end{notebox}
+
+Ethics comes from the Greek word \emph{Ethos}, meaning habit or custom. Ethics are theories that offer normatively valid reasons to rationally endorsing a code of behaviour. In general, the cost of following an ethical rule is less than the benefit we obtain from others following the same rule. For example, feminist ethics aims to understand, criticise and correct how gender operates within our moral beliefs and practices \citep{sep-feminism-ethics}. Similarly, we can find environmental ethics and of course data ethics. In science, we often need to answer ethical questions like: is it right to use RCT in this specific scenario? under what conditions is justified to conduct animal experiments?.
+
+Descriptively, \emph{morality} refers to a code of conduct that is put forward by a society or group (e.g.~a religion), or accepted by an individiual. In a normative sense, \emph{morality} refers to a code of conduct that would be accepted by anyone who meets certain intellectual conditions (e.g.~being rational) \citep{sep-morality-definition}. For example, a company is not a \emph{moral agent} but it can encourage a certain \emph{code of conduct} to their workers. Even though \emph{morality} is the subject matter of ethics, it is most often used interchangeably with \emph{ethics}. Finally, ethics are not laws but laws are often used to enforce certain shared social values.
+
+\hypertarget{values-in-science}{%
+\subsection{Values in Science}\label{values-in-science}}
+
+\begin{quote}
+``Chapter 13 contains a discussion of some aspects of values in science, the most important being the discussion about the concepts value-free and value-laden, once introduced by Weber. The important point is that science is driven by values, it is value-laden, but its results can, and should, be value-free.'' --- Philosophy of Science for Scientists \citep{johansson2016philosophy}
+\end{quote}
+
+\hypertarget{ethical-frameworks-consequentialism-deontology-and-virtue}{%
+\section{Ethical Frameworks: Consequentialism, Deontology and Virtue}\label{ethical-frameworks-consequentialism-deontology-and-virtue}}
+
+\hypertarget{data-ethics}{%
+\section{Data Ethics}\label{data-ethics}}
+
+We often face situations where we care about the privacy of our data. For example, we do not want our location to be shared to certain companies, but we wish to benefit from the same data to see if the road is jammed. Similarly, we want our medical records to remain private but also wish to benefit from the analysis of data in medial records to improve the care and treatment given to us. We aim to automate and ease decisions thanks to data-driven algorithms but we also worry about unintended bias. Getting to know the consequences of our actions make us aware of what is right or wrong. Without that, we lack any motivation to fix potential problems. Data science is a new field and we are still defining what is right and wrong. We are noticing certain consequences on privacy, fairness, equity, etc. And in so, a social consensus is growing and laws are being created to enforce such values.
+
+A good example of this is the unsolicited email or SPAM. This was considered a great idea in the 1990s for marketing purposes. Overtime it became a problem and socially unacceptable. The \href{https://en.wikipedia.org/wiki/CAN-SPAM_Act_of_2003}{Can't SPAM act} was created to regulate it (e.g.~offering a method to unsubscribe).
+
+\hypertarget{informed-consent}{%
+\subsection{Informed consent}\label{informed-consent}}
+
+\begin{itemize}
+\tightlist
+\item
+  History
+\item
+  review board
+\item
+  right to be informed
+\item
+  must consent
+\item
+  right to withdraw
+\item
+  before things need to be implemented (a way to remove data, etc)
+\item
+  IC Exceptions
+\item
+  IC Limitations
+\end{itemize}
+
+\hypertarget{data-ownership}{%
+\subsection{Data Ownership}\label{data-ownership}}
+
+\begin{itemize}
+\tightlist
+\item
+  Nature paper on data ownership
+\item
+  github copilot and code ownership
+\item
+  recording limits
+\item
+  data destruction (data as an asset)
+\item
+  GPDR note (backups?)
+\end{itemize}
+
+\hypertarget{privacy}{%
+\subsection{Privacy}\label{privacy}}
+
+\begin{itemize}
+\tightlist
+\item
+  human right (e.g.~voting in elections)
+\item
+  zero privacy
+\item
+  sense of privacy
+\item
+  degrees of privacy (DNA)
+\item
+  collection vs use
+\item
+  amazon vs correos
+\end{itemize}
+
+\hypertarget{anonymity}{%
+\subsection{Anonymity}\label{anonymity}}
+
+\begin{itemize}
+\tightlist
+\item
+  de-identification
+\item
+  potential issues (agg. data)
+\end{itemize}
+
+\hypertarget{validity-1}{%
+\subsection{Validity}\label{validity-1}}
+
+\begin{itemize}
+\tightlist
+\item
+  consequences of errors (deny a loan, misdiagnose)
+\item
+  soruces of error
+
+  \begin{itemize}
+  \tightlist
+  \item
+    choice of a representative sample
+
+    \begin{itemize}
+    \tightlist
+    \item
+      balance important attributes (race, age, gender)
+    \item
+      project future population
+    \item
+      gradual drift
+    \end{itemize}
+  \item
+    choice of attributes and measures
+
+    \begin{itemize}
+    \tightlist
+    \item
+      limited to what's available
+    \item
+      leavce out attrs
+    \end{itemize}
+  \item
+    errors in data processing
+
+    \begin{itemize}
+    \tightlist
+    \item
+      first party error during processing
+    \item
+      \ldots{}
+    \end{itemize}
+  \item
+    errors in model design
+
+    \begin{itemize}
+    \tightlist
+    \item
+      model structure
+    \item
+      extrapolation
+    \item
+      ecological fallacy
+    \item
+      simpson's paradox
+    \end{itemize}
+  \item
+    managing change
+
+    \begin{itemize}
+    \tightlist
+    \item
+      google flu
+    \item
+      campbell's law
+    \item
+      studies balanced on gender
+    \end{itemize}
+  \end{itemize}
+\end{itemize}
+
+\hypertarget{algorithmic-fairness}{%
+\subsection{Algorithmic Fairness}\label{algorithmic-fairness}}
+
+\begin{itemize}
+\tightlist
+\item
+  correlated attributes
+\item
+  correct but misleading results
+\end{itemize}
+
+\hypertarget{reproducibility-and-fair-data}{%
+\subsection{Reproducibility and FAIR Data}\label{reproducibility-and-fair-data}}
+
+\hypertarget{data-ownership-and-the-dilution-of-responsibility}{%
+\section{Data Ownership and the Dilution of Responsibility}\label{data-ownership-and-the-dilution-of-responsibility}}
+
+\hypertarget{gdpr}{%
+\section{GDPR}\label{gdpr}}
+
+\hypertarget{historical-examples}{%
+\section{Historical Examples}\label{historical-examples}}
+
+\hypertarget{takeaway-messages-2}{%
+\section{Takeaway Messages}\label{takeaway-messages-2}}
 
 \hypertarget{wont-fix}{%
 \chapter{Extra Material}\label{wont-fix}}
