--- a/book.bib
+++ b/book.bib
@@ -330,6 +330,17 @@ edition = {1st},
 }
 
 
+@article{coles2019einstein,
+  title={Einstein, Eddington and the 1919 eclipse.},
+  author={Coles, Peter},
+  journal={Nature},
+  volume={568},
+  number={7752},
+  pages={306--308},
+  year={2019},
+  publisher={Nature Publishing Group}
+}
+
 @article{tsivgoulis2017under,
   title={Under-representation of women in stroke randomized controlled trials: inadvertent selection bias leading to suboptimal conclusions},
   author={Tsivgoulis, Georgios and Katsanos, Aristeidis H and Caso, Valeria},
