added new references

--- a/book.bib
+++ b/book.bib
@@ -143,6 +143,23 @@ edition = {1st},
 	publisher    =	{Metaphysics Research Lab, Stanford University}
 }
 
+@InCollection{sep-logic-nonmonotonic,
+	author       =	{Strasser, Christian and Antonelli, G. Aldo},
+	title        =	{{Non-monotonic Logic}},
+	booktitle    =	{The {Stanford} Encyclopedia of Philosophy},
+	editor       =	{Edward N. Zalta},
+	howpublished =	{\url{https://plato.stanford.edu/archives/sum2019/entries/logic-nonmonotonic/}},
+	year         =	{2019},
+	edition      =	{{S}ummer 2019},
+	publisher    =	{Metaphysics Research Lab, Stanford University}
+}
+
+@book{pearl2014probabilistic,
+  title={Probabilistic reasoning in intelligent systems: networks of plausible inference},
+  author={Pearl, Judea},
+  year={2014},
+  publisher={Elsevier}
+}
 
 @article{diez1997fundamentos,
   title={Fundamentos de filosof{\'\i}a de la ciencia},
