--- a/book.bib
+++ b/book.bib
@@ -154,6 +154,18 @@ edition = {1st},
 	publisher    =	{Metaphysics Research Lab, Stanford University}
 }
 
+@InCollection{sep-reasoning-defeasible,
+	author       =	{Koons, Robert},
+	title        =	{{Defeasible Reasoning}},
+	booktitle    =	{The {Stanford} Encyclopedia of Philosophy},
+	editor       =	{Edward N. Zalta},
+	howpublished =	{\url{https://plato.stanford.edu/archives/fall2021/entries/reasoning-defeasible/}},
+	year         =	{2021},
+	edition      =	{{F}all 2021},
+	publisher    =	{Metaphysics Research Lab, Stanford University}
+}
+
+
 @book{pearl2014probabilistic,
   title={Probabilistic reasoning in intelligent systems: networks of plausible inference},
   author={Pearl, Judea},
