--- a/docs/POSDE_bookdown.tex
+++ b/docs/POSDE_bookdown.tex
@@ -901,7 +901,7 @@ Is also important to notice how the problem of underdetermination relates to the
 \end{tipbox}
 
 \hypertarget{other-types-of-inference}{%
-\subsection{Other types of inference}\label{other-types-of-inference}}
+\section{Other types of inference}\label{other-types-of-inference}}
 
 \begin{notebox}
 
